--- a/icmake/doc/icmake.1
+++ b/icmake/doc/icmake.1
@@ -1,4 +1,4 @@
-.TH "icmake" "1" "1992\-2015" "icmake\&.8\&.00\&.00\&.tar\&.gz" "A program maintenance utility"
+.TH "icmake" "1" "1992\-2015" "icmake\&.8\&.00\&.01\&.tar\&.gz" "A program maintenance utility"
 
 .PP 
 .SH "NAME"
@@ -426,7 +426,7 @@ UNIX~may alternatively be available
 linux~x86 running Linux (usually with gcc)
 LINUX~may alternatively be available
 M_SYSV, M_UNIX~x86 running SCO/Unix
-_POSIX~_SOURCE   Unix with Posix complient compiler
+_POSIX~_SOURCE   Unix with Posix compliant compiler
 __hpux~HP\-UX, with the native HP compiler
 
 .TE 
