--- a/icmake/changelog
+++ b/icmake/changelog
@@ -1,3 +1,9 @@
+icmake (8.00.02)
+
+  * Fixed a leftover size_t / unsigned mismatch on amd64 architectures.
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Tue, 08 Dec 2015 19:23:40 +0100
+
 icmake (8.00.01)
 
   * Fixed size_t / unsigned mismatches on amd64 architectures.
