--- a/icmake/changelog
+++ b/icmake/changelog
@@ -1,3 +1,9 @@
+icmake (8.00.03)
+
+ * Fixed a erroneously placed variable definition in icmbuild.in
+
+
+
 icmake (8.00.02)
 
   * Fixed a leftover size_t / unsigned mismatch on amd64 architectures.
