--- a/icmake/icm-comp/parser/inc/tokens.2
+++ b/icmake/icm-comp/parser/inc/tokens.2
@@ -33,7 +33,9 @@
     IF
     INT
     LIST
+    LISTFIND
     LISTLEN
+    LISTMERGE
     MAKELIST
     ECHO_TOKEN
     NUMBER
@@ -41,6 +43,7 @@
     PUTENV
     RETURN
     STAT
+    STRCHR
     STRING
     STRINGTYPE
     STRLEN
