--- a/icmake/icm-comp/parser/inc/function.5
+++ b/icmake/icm-comp/parser/inc/function.5
@@ -51,21 +51,27 @@ _one_arg_funs:
 ;
 
 _two_arg_funs:
-    C_EXT                               /* string, string */
+    C_EXT                           /* string, string */
 |
     C_BASE
 |
     C_PATH
 |
-    ELEMENT                             /* int, list | int, string */
+    ELEMENT                         /* int, list | int, string */
 |
-    FGETS                               /* list fgets(string, int) */
+    FGETS                           /* list fgets(string, int) */
 |
-    FIELDS                              /* string, string */
+    FIELDS                          /* string, string */
 |
-    STRFIND                              /* string, string */
+    LISTFIND                        /* list, string */
 |
-    RESIZE                           /* string, int */
+    LISTMERGE                       /* list, list | list, string */
+|
+    STRCHR                          /* string, string */
+|
+    STRFIND                         /* string, string */
+|
+    RESIZE                          /* string, int */
 ;
 
 _optint_string:
