--- a/icmake/icm-comp/parser/inc/function.5
+++ b/icmake/icm-comp/parser/inc/function.5
@@ -65,7 +65,7 @@ _two_arg_funs:
 |
     LISTFIND                        /* list, string */
 |
-    LISTMERGE                       /* list, list | list, string */
+    LISTUNION                       /* list, list | list, string */
 |
     STRCHR                          /* string, string */
 |
