--- a/icmake/changelog
+++ b/icmake/changelog
@@ -20,6 +20,9 @@ icmake (8.01.00)
 * The builtin function 'getch()' now prints one newline character when the
   user presses 'Enter' (previously 2 newlines were printed).
 
+* The main() function must have return type 'void' (this was already required
+  in earlier versions, but is now enforced).
+
 * Updated the manpages
 
 
