--- a/icmake/INSTALL
+++ b/icmake/INSTALL
@@ -1,7 +1,7 @@
 INSTALLING ICMAKE
 =================
 
-                          Version 8.00.00 (and beyond)
+                          Version 8.00.00 (and beyond).
 
 1. Unpack the archive:
 ======================
